# Release-logger-backend

./: .env  .gitignore  README.md  pyproject.toml
src/: controller.py  dto.py  model.py  service.py
tests/: test_controller.py  test_model.py  test_service.py  utils.py
